# code-review-skill

./: .gitignore  Makefile  README.md  REVIEW-REPORT.md  pyproject.toml
.claude/review/: cache.json  checklist.yaml
.claude/review/staging/: changeset.json  file-skills-code-review-pipeline-py.json  file-skills-code-review-tests-test_pipeline-py.json  symbol-cached.json  symbol-skills-code-review-pipeline-py-Annotation.json  symbol-skills-code-review-pipeline-py-CacheChecks.json  symbol-skills-code-review-pipeline-py-CacheFile.json  symbol-skills-code-review-pipeline-py-CacheStats.json  symbol-skills-code-review-pipeline-py-ChangesetTarget.json  symbol-skills-code-review-pipeline-py-CheckOutput.json  symbol-skills-code-review-pipeline-py-Checklist.json  symbol-skills-code-review-pipeline-py-ChecklistItem.json  symbol-skills-code-review-pipeline-py-FileTarget.json  symbol-skills-code-review-pipeline-py-MergeResult.json  symbol-skills-code-review-pipeline-py-RefreshStats.json  symbol-skills-code-review-pipeline-py-ReviewSummary.json  symbol-skills-code-review-pipeline-py-StagingEntry.json  symbol-skills-code-review-pipeline-py-SymbolDef.json  symbol-skills-code-review-pipeline-py-SymbolTarget.json  symbol-skills-code-review-pipeline-py-TargetEntry.json  symbol-skills-code-review-pipeline-py-_FileCacheResult.json  symbol-skills-code-review-pipeline-py-_SymbolCacheResult.json  symbol-skills-code-review-pipeline-py-_annotate_source.json  symbol-skills-code-review-pipeline-py-_build_files_cache.json  symbol-skills-code-review-pipeline-py-_build_symbols_cache.json  symbol-skills-code-review-pipeline-py-_check_file_cache.json  symbol-skills-code-review-pipeline-py-_check_symbol_cache.json  symbol-skills-code-review-pipeline-py-_convert_annotations_to_offsets.json  symbol-skills-code-review-pipeline-py-_convert_offsets_to_lines.json  symbol-skills-code-review-pipeline-py-_count_checks.json  symbol-skills-code-review-pipeline-py-_discover_python_files.json  symbol-skills-code-review-pipeline-py-_extract_symbol_entries.json  symbol-skills-code-review-pipeline-py-_filter_symbols_by_diff.json  symbol-skills-code-review-pipeline-py-_format_summary.json  symbol-skills-code-review-pipeline-py-_get_diff_hunks.json  symbol-skills-code-review-pipeline-py-_normalize_symbol_target.json  symbol-skills-code-review-pipeline-py-_ranges_overlap.json  symbol-skills-code-review-pipeline-py-_read_source_lines.json  symbol-skills-code-review-pipeline-py-_restore_symbol_target.json  symbol-skills-code-review-pipeline-py-_verify_targets.json  (+18 more)
.claude/skills/code-review/: pipeline.py
.github/workflows/: publish.yml
code_review_skill/: cache.py  checklist.py  cli.py  render.py  staging.py  symbols.py  types.py
skills/code-review/: .gitignore  SKILL.md  pipeline.py
skills/code-review/tests/: test_pipeline.py
src/code_review_skill/: __init__.py  __main__.py  cache.py  cli.py  render.py  staging.py  symbols.py  types.py
src/code_review_skill/data/: checklist.yaml
tests/: test_pipeline.py
tests/staging/: _meta.json  changeset.json  file-store.json  file-table.json  symbol-group1.json  symbol-group2.json  symbol-group3.json
vscode-code-review-lens/: .vscodeignore  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
vscode-code-review-lens/src/: extension.ts
vscode-code-review-lens/src/providers/: codeLensProvider.ts  decorationsProvider.ts  diagnosticsProvider.ts  gutterProvider.ts  statusBarProvider.ts  treeViewProvider.ts
vscode-code-review-lens/src/store/: resultLoader.ts  reviewStore.ts  staleness.ts
vscode-code-review-lens/src/types/: tree.ts
vscode-code-review-lens/src/utils/: dataTransform.ts  formatting.ts
vscode-code-review-lens/src/views/: dashboardHtml.ts  dashboardPanel.ts
vscode-code-review-lens/test/: mock-vscode.ts
vscode-code-review-lens/test/providers/: codeLensProvider.test.ts  diagnosticsProvider.test.ts  treeViewProvider.test.ts
vscode-code-review-lens/test/store/: resultLoader.test.ts  reviewStore.test.ts  staleness.test.ts
vscode-code-review-lens/test/utils/: dataTransform.test.ts
vscode-review/: .vscodeignore  package-lock.json  package.json  tsconfig.json
vscode-review/src/: decorationsProvider.ts  diagnosticsProvider.ts  extension.ts  resultLoader.ts  staleness.ts  types.ts
vscode-review/test/: decorationsProvider.test.ts  diagnosticsProvider.test.ts  mock-vscode.ts  resultLoader.test.ts  staleness.test.ts
