[project]
name = "code-review-skill"
version = "0.1.0"
description = "Code review pipeline for Claude Code — review code against a configurable checklist"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "wangyuxinwhy" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = ["pyyaml>=6"]

[project.urls]
Homepage = "https://github.com/wangyuxinwhy/code-review-skill"
Repository = "https://github.com/wangyuxinwhy/code-review-skill"
Issues = "https://github.com/wangyuxinwhy/code-review-skill/issues"

[project.scripts]
code-review-skill = "code_review_skill.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "basedpyright>=1.29",
    "pytest>=8",
    "complexipy>=5.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "W",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade (3.12+)
    "B",    # bugbear
    "SIM",  # simplify
    "PIE",  # misc lints
    "PT",   # pytest style
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "C4",   # comprehensions
    "TC",   # type-checking imports
    "PL",   # pylint subset
    "PERF", # performance
    "FURB", # refurb
]
ignore = [
    "PLR0911", # use cognitive complexity instead
    "PLR0912", # use cognitive complexity instead
    "PLR0913", # use cognitive complexity instead
    "PLR0915", # use cognitive complexity instead
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "PLR2004",  # magic values fine in tests
    "PT011",    # pytest.raises too broad — acceptable in tests
    "N802",     # function name casing — test names can be descriptive
    "PLC0415",  # local imports — useful for test isolation
    "E501",     # line length — test data strings can be long
]

[tool.ruff.lint.isort]
known-first-party = ["code_review_skill"]

[tool.basedpyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
include = ["src/code_review_skill"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
